--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Playful Login – Lottie + Eye Tracking</title>
+  <title>Playful Login – REAL Eye Tracking + Lottie</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Lottie Player -->
+  <!-- Lottie -->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
   <style>
@@ -17,10 +17,7 @@
       background: linear-gradient(120deg, #f6f9ff, #e9f0ff);
     }
 
-    .container {
-      display: flex;
-      width: 100%;
-    }
+    .container { display: flex; width: 100%; }
 
     /* LEFT SIDE */
     .left {
@@ -29,10 +26,26 @@
       align-items: center;
       justify-content: center;
       gap: 40px;
+      position: relative;
     }
 
-    .character {
-      width: 180px;
+    .character-wrapper {
+      position: relative;
+      width: 200px;
+    }
+
+    /* SVG EYES */
+    .eyes-svg {
+      position: absolute;
+      top: 55px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 140px;
+      pointer-events: none;
+    }
+
+    .pupil {
+      transition: transform 0.05s linear;
     }
 
     /* RIGHT SIDE */
@@ -51,10 +64,7 @@
       box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     }
 
-    .login-box h2 {
-      margin-bottom: 20px;
-      text-align: center;
-    }
+    .login-box h2 { text-align: center; margin-bottom: 20px; }
 
     .login-box input {
       width: 100%;
@@ -62,7 +72,6 @@
       margin-bottom: 15px;
       border-radius: 8px;
       border: 1px solid #ccc;
-      font-size: 15px;
     }
 
     .login-box button {
@@ -72,17 +81,11 @@
       border-radius: 8px;
       background: #4361ee;
       color: #fff;
-      font-size: 16px;
       cursor: pointer;
-    }
-
-    .login-box button:hover {
-      background: #3a56d4;
     }
 
     .error {
       color: red;
-      font-size: 14px;
       text-align: center;
       margin-top: 10px;
       display: none;
@@ -96,14 +99,16 @@
 </head>
 <body>
 
-  <div class="container">
+<div class="container">
 
-    <!-- LEFT: LOTTIE CHARACTERS -->
-    <div class="left">
-      <!-- Idle / Eye-tracking animation -->
+  <!-- LEFT: CHARACTER -->
+  <div class="left">
+
+    <div class="character-wrapper" id="character">
+
+      <!-- LOTTIE BODY -->
       <lottie-player
-        id="charIdle"
-        class="character"
+        id="body"
         src="https://assets10.lottiefiles.com/packages/lf20_jcikwtux.json"
         background="transparent"
         speed="1"
@@ -111,68 +116,84 @@
         autoplay>
       </lottie-player>
 
-      <!-- Cover-eyes animation -->
-      <lottie-player
-        id="charCover"
-        class="character"
-        src="https://assets1.lottiefiles.com/packages/lf20_q5pk6p1k.json"
-        background="transparent"
-        speed="1"
-        loop
-        style="display:none">
-      </lottie-player>
-    </div>
+      <!-- SVG EYES (REAL TRACKING) -->
+      <svg class="eyes-svg" viewBox="0 0 200 60">
+        <ellipse cx="60" cy="30" rx="28" ry="20" fill="#fff" />
+        <ellipse cx="140" cy="30" rx="28" ry="20" fill="#fff" />
 
-    <!-- RIGHT: LOGIN -->
-    <div class="right">
-      <div class="login-box">
-        <h2>Login</h2>
-        <input type="text" id="username" placeholder="Username" />
-        <input type="password" id="password" placeholder="Password" />
-        <button onclick="login()">Sign In</button>
-        <div class="error" id="error">Wrong password</div>
-      </div>
+        <circle id="pupilLeft" class="pupil" cx="60" cy="30" r="8" fill="#000" />
+        <circle id="pupilRight" class="pupil" cx="140" cy="30" r="8" fill="#000" />
+      </svg>
+
     </div>
 
   </div>
 
-  <script>
-    const idle = document.getElementById('charIdle');
-    const cover = document.getElementById('charCover');
-    const passwordInput = document.getElementById('password');
-    const error = document.getElementById('error');
+  <!-- RIGHT: LOGIN -->
+  <div class="right">
+    <div class="login-box">
+      <h2>Login</h2>
+      <input type="text" placeholder="Username" />
+      <input type="password" id="password" placeholder="Password" />
+      <button onclick="login()">Sign In</button>
+      <div class="error" id="error">Wrong password</div>
+    </div>
+  </div>
 
-    /* EYE TRACKING (cursor-based rotation illusion) */
-    document.addEventListener('mousemove', (e) => {
-      const x = (e.clientX / window.innerWidth - 0.5) * 20;
-      const y = (e.clientY / window.innerHeight - 0.5) * 20;
-      idle.style.transform = `rotateX(${ -y }deg) rotateY(${ x }deg)`;
-    });
+</div>
 
-    /* PASSWORD FOCUS → COVER EYES */
-    passwordInput.addEventListener('focus', () => {
-      idle.style.display = 'none';
-      cover.style.display = 'block';
-      cover.play();
-    });
+<script>
+  const character = document.getElementById('character');
+  const pupilL = document.getElementById('pupilLeft');
+  const pupilR = document.getElementById('pupilRight');
+  const password = document.getElementById('password');
+  const error = document.getElementById('error');
 
-    passwordInput.addEventListener('blur', () => {
-      cover.style.display = 'none';
-      idle.style.display = 'block';
-      idle.play();
-    });
+  let eyesEnabled = true;
 
-    function login() {
-      if (passwordInput.value !== 'admin123') {
-        error.style.display = 'block';
-        idle.setDirection(-1);
-        idle.play();
-      } else {
-        error.style.display = 'none';
-        alert('Login successful!');
-      }
+  document.addEventListener('mousemove', (e) => {
+    if (!eyesEnabled) return;
+
+    const rect = character.getBoundingClientRect();
+    const cx = rect.left + rect.width / 2;
+    const cy = rect.top + 90;
+
+    const dx = e.clientX - cx;
+    const dy = e.clientY - cy;
+
+    const max = 8;
+    const angleX = Math.max(Math.min(dx / 20, max), -max);
+    const angleY = Math.max(Math.min(dy / 20, max), -max);
+
+    pupilL.style.transform = `translate(${angleX}px, ${angleY}px)`;
+    pupilR.style.transform = `translate(${angleX}px, ${angleY}px)`;
+  });
+
+  password.addEventListener('focus', () => {
+    eyesEnabled = false;
+    pupilL.style.transform = 'translate(0, 12px)';
+    pupilR.style.transform = 'translate(0, 12px)';
+  });
+
+  password.addEventListener('blur', () => {
+    eyesEnabled = true;
+  });
+
+  function login() {
+    if (password.value !== 'admin123') {
+      error.style.display = 'block';
+      character.animate([
+        { transform: 'translateX(0)' },
+        { transform: 'translateX(-8px)' },
+        { transform: 'translateX(8px)' },
+        { transform: 'translateX(0)' }
+      ], { duration: 400 });
+    } else {
+      error.style.display = 'none';
+      alert('Login successful!');
     }
-  </script>
+  }
+</script>
 
 </body>
 </html>
